Bug 329338 - CSV importer UI exhibits some label clipping, and also shows a need for a few tweaks.
Summary: CSV importer UI exhibits some label clipping, and also shows a need for a few...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-28 22:17 UTC by allan
Modified: 2013-12-31 11:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2013-12-28 22:17:34 UTC
A) A couple of labels  for the different wizard pages were getting clipped when in bold.
B) Between CSV Importer table widget window and wizard page area, there is an unnecessary amount of empty space.
C) Fix a couple of typos.
D) Make minor adjustments to layout sizing and button and label widths, to improve appearance.
E) investment page column 0 not shrinking when date content is narrower.

Reproducible: Always

Steps to Reproduce:
A. When the wizard is on the Introduction page or Separator page, the relevant label is highlighted as bold, resulting in clipping.
E. Often, column 0 has account information, which takes up more space than the data part, which is usually a date.  Once the header is scrolled out of view, the column width was not shrinking to suit the date.
3.
Actual Results:  
As above.
Comment 1 allan 2013-12-31 11:56:43 UTC
Git commit adc3bbee6103cef9b907ef60ff59fc69caa09bed by Allan Anderson.
Committed on 31/12/2013 at 11:09.
Pushed by allananderson into branch 'master'.

Fix CSV importer UI label clipping, and make several minor adjustments to layout sizing to improve appearance.
Fix investment page column 0 not shrinking when data content is narrower.

M  +5    -6    kmymoney/plugins/csvimport/csvdialog.cpp
M  +1    -1    kmymoney/plugins/csvimport/csvdialog.h
M  +17   -7    kmymoney/plugins/csvimport/csvdialog.ui
M  +1    -1    kmymoney/plugins/csvimport/investmentwizardpage.ui
M  +2    -1    kmymoney/plugins/csvimport/investprocessing.cpp
M  +2    -2    kmymoney/plugins/csvimport/separatorwizardpage.ui

http://commits.kde.org/kmymoney/adc3bbee6103cef9b907ef60ff59fc69caa09bed