Fix CSV importer UI label clipping, and make several minor adjustments to layout sizing to improve appearance. Fix investment page column 0 not shrinking when data content is narrower.

BUG:329338